feat(auth): implement complete user profile management system with comprehensive test coverage (#4)
- Add updateProfile, changeCredentials, getUserProfile, getUserIdFromUsername, and getAddressFromUser methods to AuthService
- Implement GET /api/auth/profile, PUT /api/auth/profile, and PUT /api/auth/credentials endpoints in AuthController
- Add comprehensive unit tests for all AuthService profile management methods with edge cases and error scenarios
- Implement integration tests for AuthService using Keycloak testcontainers with real authentication flows
- Add complete AuthController integration tests with Spring Security Test framework including CSRF protection
- Include validation testing for email formats, password requirements, and null/empty field handling
- Add error handling for non-existent users, incorrect passwords, and authentication failures
- Implement proper JWT authentication mocking and testcontainer setup for realistic integration testing
- Add address attribute management with support for custom user attributes in Keycloak
- Include comprehensive test coverage for authentication, authorization, validation, and business logic scenarios

Tests: 47 test methods across service unit tests, service integration tests, and controller integration tests
Coverage: All CRUD operations for user profiles, credential management, and user lookup functionality